# globe-renderer

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yml
cmake/: git.cmake  module.cmake  module_tests.cmake
include/renderer/: context.hpp  device.hpp  graphics_window.hpp  shader_program.hpp
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/core/: color.hpp  optional.hpp
modules/core/include/glbr/core/: algorithm.hpp  color.hpp  event.hpp  expected.hpp  image.hpp  maths.hpp  optional.hpp  size.hpp  variant.hpp
modules/core/include/glbr/core/concurrent/: run_loop.hpp  scheduler.hpp  simple_run_loop.hpp  thread_pool.hpp  threaded_run_loop.hpp
modules/core/include/glbr/core/events/: event.hpp  event_handler.hpp  event_producer.hpp
modules/core/include/glbr/core/geometry/: mesh.hpp  point_2d.hpp  point_3d.hpp  primitive_type.hpp  winding_order.hpp
modules/core/include/glbr/core/geometry/vertex_attributes/: vertex_attribute.hpp  vertex_attribute_type.hpp
modules/core/src/: image.cpp
modules/core/src/concurrent/: scheduler.cpp  simple_run_loop.cpp  thread_pool.cpp
modules/core/src/geometry/: mesh.cpp
modules/core/src/geometry/vertex_attributes/: vertex_attributes.cpp
modules/geo/: CMakeLists.txt
modules/geo/include/glbr/geo/: lng_lat.hpp  (+1 more)
modules/geo/src/crs/: epsg_3857.cpp
modules/geo/src/projection/: spherical_mercator_projection.cpp
modules/gui/: CMakeLists.txt
modules/gui/src/imgui/: imgui_backend.cpp  imgui_layer.cpp
modules/input/: CMakeLists.txt
modules/input/src/: key_codes.cpp  key_state.cpp  mouse_button_codes.cpp
modules/input/src/events/: char_event.cpp  input.cpp  key_event.cpp  mouse_button_event.cpp  mouse_move_event.cpp  mouse_scroll_event.cpp
modules/io/: CMakeLists.txt
modules/io/include/io/: file.hpp
modules/logging/: CMakeLists.txt
modules/logging/src/: logging.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/include/renderer/: clear_state.hpp  context.hpp  device.hpp  draw_state.hpp  graphics_window.hpp  pipeline.hpp  render_state.hpp
modules/renderer/src/: context.cpp  pipeline.cpp  window_resized_event.cpp
modules/renderer/src/scene/: camera.cpp  scene_state.cpp
modules/renderer_opengl3/: CMakeLists.txt
modules/renderer_opengl3/src/: context_opengl3.cpp  device_opengl3.cpp  pipeline_opengl3.cpp
modules/renderer_opengl3/src/buffers/: buffer_opengl3.cpp  index_buffer_opengl3.cpp  vertex_buffer_opengl3.cpp
modules/scene/: CMakeLists.txt
platform/: CMakeLists.txt
platform/glfw/: CMakeLists.txt
platform/glfw/include/renderer/glfw/: graphics_window_glfw.hpp
platform/glfw/src/: graphics_window_glfw.cpp
platform/glfw_opengl3/: CMakeLists.txt
platform/glfw_opengl3/include/glbr/renderer/glfw/: graphics_window_glfw.hpp
platform/glfw_opengl3/src/: glfw_events.cpp  glfw_events.hpp  glfw_system.hpp  graphics_window_glfw.cpp
platform/http_datasource_curl/: CMakeLists.txt
platform/http_datasource_curl/src/: http_data_source.cpp  http_data_source_curl.cpp  http_data_source_curl_worker.cpp  http_data_source_curl_worker.hpp  http_data_source_worker.hpp  http_request.cpp  http_request.hpp
platform/opengl3/: CMakeLists.txt
platform/opengl3/include/renderer/opengl3/: context_opengl3.hpp  device_opengl3.hpp  errors.hpp  pipeline_opengl3.hpp
platform/opengl3/include/renderer/opengl3/buffers/: buffer_opengl3.hpp  index_buffer_opengl3.hpp  vertex_buffer_opengl3.hpp
platform/opengl3/include/renderer/opengl3/vertex_array/: vertex_array_opengl3.hpp
platform/opengl3/src/: context_opengl3.cpp  device_opengl3.cpp  pipeline_opengl3.cpp
platform/opengl3/src/buffers/: buffer_opengl3.cpp  index_buffer_opengl3.cpp  vertex_buffer_opengl3.cpp
platform/opengl3/src/vertex_array/: vertex_array_opengl3.cpp
sandbox/: CMakeLists.txt  main.cpp
sandbox/basic_glfw/: CMakeLists.txt  main.cpp
sandbox/basic_glfw/resources/: triangle.fragment.glsl
sandbox/camera_glfw/: CMakeLists.txt  main.cpp
sandbox/camera_glfw/resources/: fragment.glsl  vertex.glsl
sandbox/globe_glfw/: CMakeLists.txt  main.cpp  subdivision.hpp
sandbox/globe_glfw/resources/: fragment.glsl  vertex.glsl
sandbox/gui_glfw/: CMakeLists.txt  main.cpp
sandbox/map_2D/: CMakeLists.txt  main.cpp  map_2d.hpp
sandbox/texture_glfw/: main.cpp
sandbox/texture_glfw/resources/: fragment.glsl  vertex.glsl
scripts/: run-asan.sh
src/renderer/: CMakeLists.txt  shader_program.cpp
test/: CMakeLists.txt  run_all_tests.sh
test/core/: CMakeLists.txt  event.test.cpp  image.test.cpp  maths.test.cpp  optional.test.cpp
test/core/concurrent/: thread_pool.test.cpp
test/core/geometry/: mesh.test.cpp
test/geo/crs/: epsg_3857.test.cpp
test/geo/projection/: spherical_mercator_projection.test.cpp
test/io/: CMakeLists.txt
test/modules/: CMakeLists.txt
test/modules/core/: algorithm.test.cpp  image.test.cpp  maths.test.cpp  optional.test.cpp
test/modules/core/concurrent/: simple_run_loop.test.cpp  thread_pool.test.cpp  threaded_run_loop.test.cpp
test/modules/core/geometry/: mesh.test.cpp
test/modules/geo/: CMakeLists.txt  lng_lat_bounds.test.cpp
test/modules/geo/tiles/: tile_cover.test.cpp  tile_id.test.cpp
test/modules/io/: file.test.cpp
test/modules/renderer/: CMakeLists.txt
test/modules/renderer_opengl3/: CMakeLists.txt
test/modules/renderer_opengl3/textures/: texture_unit_opengl3.test.cpp
test/modules/renderer_opengl3/textures/context/: context_opengl3.test.cpp
test/modules/renderer_opengl3/vertex_attributes/: vertex_attribute_bindings_opengl3.test.cpp
test/modules/scene/camera/: orbiting_camera_ctrl.test.cpp
test/renderer/: context.test.cpp
test/renderer/vertex_attributes/: vertex_attribute_bindings.test.cpp
test/renderer_opengl3/: CMakeLists.txt
test/renderer_opengl3/textures/: texture2d_opengl3.test.cpp  texture_sampler_opengl3.test.cpp  texture_unit_opengl3.test.cpp
test/renderer_opengl3/vertex_attributes/: vertex_attribute_bindings_opengl3.test.cpp
test/scene/: CMakeLists.txt
test/scene/camera/: orbiting_camera_ctrl.test.cpp
(+110 files in other folders)
